@@ -39,6 +39,8 @@
 				<string>id</string>
 				<key>onTranscriptFolderChanged</key>
 				<string>id</string>
+				<key>onUseGrowlClicked</key>
+				<string>id</string>
 			</dict>
 			<key>CLASS</key>
 			<string>PreferenceDialog</string>
@@ -71,6 +73,8 @@
 				<key>gen_main_window_layout</key>
 				<string>id</string>
 				<key>gen_max_log_lines</key>
+				<string>id</string>
+				<key>gen_stop_growl_on_active</key>
 				<string>id</string>
 				<key>gen_tab_action</key>
 				<string>id</string>
